# yuzono-testing

./: .gitignore  .gitmodules  README.md  build.gradle.kts  pyproject.toml  requirements.txt  settings.gradle.kts
.github/workflows/: main.yml  test-extensions-kotlin.yml
gradle/: libs.versions.toml
src/anime_ext_test/: __init__.py  __main__.py  cli.py  config.py  discovery.py  http_client.py  models.py  runner.py  theme_patterns.py
src/anime_ext_test/report/: __init__.py  html_report.py  json_report.py  markdown_report.py  summary.py
src/anime_ext_test/tests/: __init__.py  connectivity.py  details.py  episode_list.py  episodes.py  filters.py  latest.py  pagination.py  popular.py  post_search.py  registry.py  search.py  series_details.py  structural.py  video_streams.py
test-framework/: build.gradle.kts
test-framework/src/main/kotlin/keiyoushi/testframework/bootstrap/: SourceInstantiator.kt  TestBootstrap.kt
test-framework/src/main/kotlin/keiyoushi/testframework/discovery/: BuildGradleParser.kt  ExtensionDiscovery.kt
test-framework/src/main/kotlin/keiyoushi/testframework/model/: ExtensionMeta.kt
test-runner/: build.gradle.kts
test-runner/src/main/kotlin/keiyoushi/testrunner/: TestRunner.kt
tests/: test_cli.py  test_config.py  test_discovery.py  test_http_client.py  test_models.py  test_report.py  test_structural.py  test_theme_patterns.py
tests/fixtures/sample_build_gradles/: factory_build.gradle  legacy_build.gradle  missing_ext_block.gradle
tests/fixtures/sample_html/: detail_page.html  popular_page.html
(+29 files in other folders)
