[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anime-extensions-testing"
version = "1.0.0"
description = "Automated testing suite for yuzono/anime-extensions"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.9.0",
    "aiofiles>=23.2",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "pydantic>=2.5",
    "rich>=13.7",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
